# Microparser

./: CHANGELOG.md  Microparser.cabal  cabal.project
src/Language/MicroHs/: Expr.hs  Ident.hs  Lex.hs  Parse.hs  Test.hs
src/MicroHs/: Builtin.hs  List.hs
src/Text/: ParserComb.hs
src/Text/PrettyPrint/: HughesPJLite.hs  HughesPJLiteClass.hs
