cabal-version:      3.0
name:               Microparser
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Artin Ghasivand
maintainer:         ghasivand.artin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions: ScopedTypeVariables TypeSynonymInstances MultiParamTypeClasses
                        FlexibleInstances BangPatterns

    exposed-modules:  Language.MicroHs.Expr
                      Language.MicroHs.Ident
                      Language.MicroHs.Lex
                      Language.MicroHs.Parse
                      Text.PrettyPrint.HughesPJLite
                      Text.ParserComb

    other-modules: MicroHs.List
                   MicroHs.Builtin

    -- other-modules:
    if impl(ghc)
      build-depends: Microlude
                   , base
                   , text
                   , pretty
                   , ghc-prim
                   , deepseq
    if impl(mhs)
      build-depends: Microlude

    hs-source-dirs:   src
    default-language: Haskell2010
